--- a/src/main/webapp/_template.xhtml
+++ b/src/main/webapp/_template.xhtml
@@ -14,6 +14,12 @@
 
 <div id="header">
     <ui:insert name="header">
+    <h:form>
+     <h:commandLink action="#{usuarioBean.logout}">
+		        	Logout
+		        </h:commandLink>
+    </h:form>
+    	       
     	 <div class="card">
 		    <p:tabMenu activeIndex="#{param.i}">
 		        <p:menuitem value="Home" outcome="index.xhtml" icon="pi pi-fw pi-home">
@@ -28,6 +34,7 @@
 		        <p:menuitem value="Listar Usuarios" outcome="listarUsuario.xhtml" icon="pi pi-fw pi-book">
 		            <f:param name="i" value="3"/>
 		        </p:menuitem>
+	
 		    </p:tabMenu>
 		</div>
     </ui:insert>
